tests/snapshots/js_t__js_newlines_are_preserved.snap
---
source: tests/js_t.rs
---
import { t } from '@lingui/core/macro';
  t`Multiline
    string`;

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "esSxMt",
    message: "Multiline\n    string"
});
