tests/snapshots/js_t__js_should_produce_all_fields_when_no_message_set.snap
---
source: tests/js_t.rs
---
import { t } from '@lingui/core/macro'
const msg2 = t({
    id: 'msgId',
    comment: 'description for translators',
    context: 'My Context',
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const msg2 = $_i18n._(/*i18n*/ {
    id: "msgId",
    context: "My Context",
    comment: "description for translators"
});
