tests/snapshots/js_t__js_should_use_v5_generate_id_with_parameter.snap
---
source: tests/js_t.rs
info:
  use_lingui_v5_id_generation: true
---
import { t } from '@lingui/core/macro'
t({
  message: "Hello World",
  context: "my context"
});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "SO/WB8",
    message: "Hello World",
    context: "my context"
});
