tests/snapshots/js_t__js_support_message_descriptor_in_t_fn.snap
---
source: tests/js_t.rs
---
import { t } from '@lingui/core/macro'
const msg = t({ message: `Hello ${name}`, id: 'msgId', comment: 'description for translators'  })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const msg = $_i18n._(/*i18n*/ {
    id: "msgId",
    message: "Hello {name}",
    values: {
        name: name
    },
    comment: "description for translators"
});
