tests/snapshots/js_t__js_t_explicit_comment_overrides_directive.snap
---
source: tests/js_t.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set comment="directive cmt" */
const msg = t({ message: "Hello", comment: "explicit cmt" })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set comment="directive cmt" */ const msg = $_i18n._(/*i18n*/ {
    id: "uzTaYi",
    message: "Hello",
    comment: "explicit cmt"
});
